# LockManager

./: LICENSE  LockManager.cabal  README
src/: TestsIO.hs  TestsSTM.hs
src/Control/Concurrent/: LockManager.hs  LockManagerIO.hs  LockManagerSTM.hs  THashTable.hs
test/: TestsHash.hs
