Name:                LockManager
Version:             0.0.1
Synopsis:            Simple locks management
Description:         The transaction lock manager allows acquire and manage READ/WRITE locks. The data item
                     can be locked by lock function. The unlockAll function releases all locks for the given
                     transaction.
License:             BSD3
License-File:        LICENSE
Author:              Vitaliy Rukavishnikov
Maintainer:          virukav@gmail.com
Homepage:            http://github.com/rukav/LockManager
Bug-Reports:         mailto:virukav@gmail.com
Build-Type:          Simple
Tested-with:	     GHC==6.12.3
Category:            Concurrency
Cabal-Version:       >=1.6
Extra-Source-Files:  README
                     test/TestsSTM.hs
                     test/TestsIO.hs
                     test/TestsHash.hs

Library
    Hs-Source-Dirs:  src
    Exposed-Modules: Control.Concurrent.LockManagerSTM
                     Control.Concurrent.LockManagerIO
                     Control.Concurrent.THashTable
    Build-Depends:   base >= 4 && < 5,
                     containers >= 0.2.0.0 && <= 0.4.0.0,
                     hashable >= 1.1.1.0,
                     stm >= 2.2.0.1,
                     murmur-hash >= 0.1.0.2,
                     unordered-containers >= 0.1.2.0,
                     vector >= 0.7.0.1